deploy/80-telemetry-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-simulator
  namespace: devices
spec:
  replicas: 1
  selector:
    matchLabels: { app: telemetry-simulator }
  template:
    metadata:
      labels: { app: telemetry-simulator }
    spec:
      containers:
        - name: sensor
          image: gerege/idp-mvp:dev
          imagePullPolicy: IfNotPresent
          command: ["/app/telemetry-simulator"]
          resources:
            requests: { cpu: 20m, memory: 32Mi }
